Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
             </div>
             <div class="admin-card">
                 <span class="role">Principal (प्रधानाचार्य)</span>
-                <h3>Sanu Kumar Ram</h3>
+                <h3>Upendra kumar Yadav</h3>
                 <p>Leading the school towards excellence.</p>
             </div>
         </div>
@@ -496,7 +496,7 @@
             </div>
             <div class="footer-info">
                 <h3>Contact</h3>
-                <p><i class="fas fa-phone"></i> 7674 9554 38</p>
+                <p><i class="fas fa-phone"></i> 9631904142</p>
                 <p><i class="fas fa-envelope"></i> ramsonukumar90@gmail.com</p>
                 <p><i class="fas fa-map-marker-alt"></i> Bajitpur, Garkha, Saran</p>
             </div>
@@ -563,4 +563,5 @@
         }
     </script>
 </body>
+
 </html>
